src-tauri/cargo_check.log
    Checking koda v0.1.0 (/home/lukasz/Development/koda/src-tauri)
error[E0252]: the name `Manager` is defined multiple times
  --> src/lib.rs:18:5
   |
 9 | use tauri::Manager;
   |     -------------- previous import of the trait `Manager` here
...
18 | use tauri::Manager;
   |     ^^^^^^^^^^^^^^ `Manager` reimported here
   |
   = note: `Manager` must be defined only once in the type namespace of this module

warning: unused import: `tauri_plugin_opener::OpenerExt`
  --> src/lib.rs:10:5
   |
10 | use tauri_plugin_opener::OpenerExt;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `tauri::Manager`
  --> src/lib.rs:18:5
   |
18 | use tauri::Manager;
   |     ^^^^^^^^^^^^^^

error[E0308]: mismatched types
    --> src/lib.rs:60:28
     |
  60 |                     .build(&handle)?,
     |                      ----- ^^^^^^^ expected `Context`, found `&AppHandle`
     |                      |
     |                      arguments to this method are incorrect
     |
     = note: expected struct `tauri::Context`
             found reference `&AppHandle`
note: method defined here
    --> /home/lukasz/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/tauri-2.10.2/src/app.rs:2094:10
     |
2094 |   pub fn build(mut self, context: Context<R>) -> crate::Result<App<R>> {
     |          ^^^^^

error[E0277]: the trait bound `tauri::App: Plugin<tauri_runtime_wry::Wry<EventLoopMessage>>` is not satisfied
   --> src/lib.rs:34:17
    |
 33 |   ...   app.handle().plugin(
    |                      ------ required by a bound introduced by this call
 34 | / ...       tauri::Builder::default()
 35 | | ...           .register_uri_scheme_protocol("library-asset", move |_app, request| {
 36 | | ...               let uri = request.uri().path();
...   |
 59 | | ...           })
 60 | | ...           .build(&handle)?,
    | |______________________________^ unsatisfied trait bound
    |
    = help: the trait `Plugin<tauri_runtime_wry::Wry<EventLoopMessage>>` is not implemented for `tauri::App`
help: the trait `Plugin<R>` is implemented for `TauriPlugin<R, C>`
   --> /home/lukasz/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/tauri-2.10.2/src/plugin.rs:782:1
    |
782 | impl<R: Runtime, C: DeserializeOwned> Plugin<R> for TauriPlugin<R, C> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `AppHandle::<R>::plugin`
   --> /home/lukasz/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/tauri-2.10.2/src/app.rs:485:20
    |
485 |   pub fn plugin<P: Plugin<R> + 'static>(&self, plugin: P) -> crate::Result<()> {
    |                    ^^^^^^^^^ required by this bound in `AppHandle::<R>::plugin`

Some errors have detailed explanations: E0252, E0277, E0308.
For more information about an error, try `rustc --explain E0252`.
warning: `koda` (lib) generated 2 warnings
error: could not compile `koda` (lib) due to 3 previous errors; 2 warnings emitted
